<resources>
    <string name="app_name">DomiApp2</string>
    <string name="numero_de_telefono">Numero de telefono</string>
    <string name="contrasena">Contraseña</string>
    <string name="recuerdame">Recuerdame</string>
    <string name="olvide_mi_contrasena">¿Olvidé mi contraseña?</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="soy_un_administrador">¿Soy un administrador?</string>
    <string name="nombre">Nombre</string>
    <string name="anadir_nuevo_producto">Añadir Nuevo Producto</string>
    <string name="precio_del_producto">Precio del Producto</string>
    <string name="descripci_n_del_producto">Descripción del Producto</string>
    <string name="nombre_del_producto">Nombre del Producto</string>
    <string name="anadir_producto">Añadir Producto</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="cerrarsesion">Cerrar Sesión</string>
    <string name="ajustes">Ajustes</string>
    <string name="categorias">Categorias</string>
    <string name="ordenes">Ordenes</string>
    <string name="carrito">Carrito</string>
    <string name="descripcion_del_producto">Descripción del producto</string>
    <string name="nombre_del_producto2">Nombre del producto</string>
    <string name="no_soy_un_administrador">No soy un administrador</string>
    <string name="precio_del_producto2">Precio del producto</string>
    <string name="cerrar">Cerrar</string>
    <string name="actualizar">Actualizar</string>
    <string name="cambiar_perfil">Cambiar el Perfil</string>
    <string name="numero_de_telefono2">Numero de telefono</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="direccion">Dirección</string>
    <string name="nombre_del_producto3">Nombre del Producto</string>
    <string name="siguiente">Siguiente</string>
    <string name="precio_total">Precio Total =</string>
</resources>
