<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminAddNewProductActivity">


    <ImageView
        android:id="@+id/select_product_image"
        android:layout_width="215dp"
        android:layout_height="197dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:src="@drawable/select_product_image"
        app:layout_constraintBottom_toTopOf="@+id/product_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/select_product_image"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/inputs_design"
        android:hint="@string/nombre_del_producto"
        android:inputType="textMultiLine"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/product_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_product_image" />

    <EditText
        android:id="@+id/product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_name"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/inputs_design"
        android:hint="@string/descripci_n_del_producto"
        android:inputType="textMultiLine"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/product_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_name" />

    <EditText
        android:id="@+id/product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_name"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/inputs_design"
        android:hint="@string/precio_del_producto"
        android:inputType="textMultiLine"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/add_new_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_description" />

    <Button
        android:id="@+id/add_new_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="45dp"
        android:text="@string/anadir_producto"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@drawable/buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_price" />
</androidx.constraintlayout.widget.ConstraintLayout>