<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/register_logoapp"
        android:layout_width="368dp"
        android:layout_height="96dp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toTopOf="@+id/register_username_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logoprincipal" />

    <EditText
        android:id="@+id/register_username_input"
        android:layout_width="339dp"
        android:layout_height="61dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/inputs_design"
        android:hint="@string/nombre"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/register_phone_number_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_logoapp"/>

    <EditText
        android:id="@+id/register_phone_number_input"
        android:layout_width="339dp"
        android:layout_height="61dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/inputs_design"
        android:hint="@string/numero_de_telefono"
        android:inputType="number"
        android:padding="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/register_password_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_username_input">

    </EditText>

    <EditText
        android:id="@+id/register_password_input"
        android:layout_width="339dp"
        android:layout_height="61dp"
        android:layout_marginBottom="90dp"
        android:background="@drawable/inputs_design"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/register_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_phone_number_input">

    </EditText>


    <Button
        android:id="@+id/register_btn"
        android:layout_width="392dp"
        android:layout_height="50dp"
        android:background="@drawable/buttons"
        android:text="Crear Cuenta"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password_input"
        app:layout_constraintVertical_bias="0.69" />



</androidx.constraintlayout.widget.ConstraintLayout>